crates/rustynes-test-harness/tests/snapshots/external_real_games__external_vrc4_akumajou_special.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-023-VRC2-VRC4/Akumajou Special - Boku Dracula-kun (Japan) (En) (1.0).nes
rom_sha256=e10ce161608c4765df9e58e0942ba1fd37c36336878e78e22ddc8b967ece5f73
frames=600
fb_bytes=245760
cycles=17838521
audio_samples=439524
audio_fnv1a64=29428bd1a30f79ce
checkpoint f600 fb_fnv1a64=61f3640469dfb583
