crates/rustynes-test-harness/tests/snapshots/external_real_games__external_vrc4_wai_wai_world.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-023-VRC2-VRC4/Wai Wai World (Japan) (En) (2.2).nes
rom_sha256=684aac13515a8aac9a3fa74fe026bfe1df12ed77c4b4d8c4748d214846e3803c
frames=600
fb_bytes=245760
cycles=17838523
audio_samples=439524
audio_fnv1a64=fbebce11273aaf6e
checkpoint f600 fb_fnv1a64=7f2c0e146bb2c5dc
