crates/rustynes-test-harness/tests/snapshots/external_real_games__external_vrc6b_esper_dream_2.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-026-VRC6/Esper Dream 2 - Aratanaru Tatakai (Japan) (En) (1.0).nes
rom_sha256=06f1dfcb506d076b0e48f9e5c30ca9bc9756118a5dfa6f10c96b1d38999c5c60
frames=600
fb_bytes=245760
cycles=17838525
audio_samples=439524
audio_fnv1a64=9b517617c4f3839c
checkpoint f600 fb_fnv1a64=9aef87ae50fb029e
