crates/rustynes-test-harness/tests/snapshots/external_real_games__external_vrc7_lagrange_point.snap
---
source: crates/rustynes-test-harness/tests/external_real_games.rs
expression: text
---
rom=mapper-085-VRC7/Lagrange Point (Japan) (En) (1.01).nes
rom_sha256=333cfe66a6e687f34a347e83cf5b82a997cb32415fc449f9d74eddfc616a5db7
frames=600
fb_bytes=245760
cycles=17838537
audio_samples=439524
audio_fnv1a64=dda9e74ae2696052
checkpoint f600 fb_fnv1a64=b3ac74f4f1cd5941
